--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,21 +1,21 @@
-google.api.key=AIzaSyBuhM_7Wng_Z9-4_AdkHM3GMtKkZ8ae3ng
-palm.api.key=AIzaSyCWmm1UW5oQ54Z5YyVW1v1kfuwrGG68zRw
+#google.api.key=AIzaSyBuhM_7Wng_Z9-4_AdkHM3GMtKkZ8ae3ng
+#palm.api.key=AIzaSyCWmm1UW5oQ54Z5YyVW1v1kfuwrGG68zRw
 
 #spring.datasource.url=jdbc:postgresql://localhost:5432/your_db_name
 #spring.datasource.username=your_db_username
 #spring.datasource.password=your_db_password
 #spring.jpa.hibernate.ddl-auto=update
 
-# Enabling H2 Console
-spring.h2.console.enabled=true
-
-# Datasource Configuration
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-
-# JPA Configuration
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+## Enabling H2 Console
+#spring.h2.console.enabled=true
+#
+## Datasource Configuration
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.driver-class-name=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=password
+#
+## JPA Configuration
+#spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
